sample/retrieveUnpackaged/objects/ANZSIC_Benchmark_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>ANZSIC__c</fullName>
        <label>ANZSIC</label>
        <referenceTo>Anzic_Code__c</referenceTo>
        <relationshipLabel>ANZSIC Benchmark Indicators</relationshipLabel>
        <relationshipName>ANZSIC_Benchmark_Indicators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sum</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ANZSIC Benchmark Indicator</label>
    <nameField>
        <label>Indicator</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ANZSIC Benchmark Indicators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>